--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=
 ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
+KERNEL_SOURCE=https://github.com/HK416AAA/kernel_xiaomi_mt6785
+KERNEL_SOURCE_BRANCH=nova
+KERNEL_TARGET=begonia_user_defconfig
 BUILD_ARGS:CC=clang LD=ld.lld
