--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
+ANYKERNEL_SOURCE=https://github.com/chilan666/AnyKernel3_GTNeoseries
+ANYKERNEL_SOURCE_BRANCH=cupida
 KERNEL_SOURCE=https://github.com/HK416AAA/kernel_xiaomi_mt6785
 KERNEL_SOURCE_BRANCH=nova
 KERNEL_TARGET=begonia_user_defconfig
