--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -32,6 +32,10 @@ jobs:
 
       - name: Setup KernelSU
         run: |
+          GKI_ROOT=/home/runner/work/kernel_build/kernel_build
+          echo '[+] GKI_ROOT: /home/runner/work/kernel_build/kernel_build'
+          test -d /home/runner/work/kernel_build/kernel_build/common/drivers
+          test -d /home/runner/work/kernel_build/kernel_build/drivers
           rm -rf KernelSU
           rm -rf drivers/kernelsu
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
