--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Setup KernelSU
         run: |
-          echo "GKI_ROOT: /home/runner/work/kernel_build/kernel_build"
+          echo "GKI_ROOT=/home/runner/work/kernel_build/kernel_build"
           test -d /home/runner/work/kernel_build/kernel_build/common/drivers
           test -d /home/runner/work/kernel_build/kernel_build/drivers
           rm -rf KernelSU
