--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/chilan666/AnyKernel3_GTNeoseries
 ANYKERNEL_SOURCE_BRANCH=cupida
-KERNEL_SOURCE=https://github.com/HK416AAA/kernel_xiaomi_mt6785
-KERNEL_SOURCE_BRANCH=nova
-KERNEL_TARGET=begonia_user_defconfig
+KERNEL_SOURCE=https://github.com/HK416AAA/android_kernel_xiaomi_lotus
+KERNEL_SOURCE_BRANCH=lineage-15.1
+KERNEL_TARGET=lotus_defconfig
 BUILD_ARGS:CC=clang LD=ld.lld
